[package]
name = "flag_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.12.0"
array-init = "2.1.0"
console="0.15.8"
rand="0.8.5"
index_vec = "0.1.3"
viuer = "0.7.1"
